Changing appveyor config

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,8 @@ branches:
 install:
 
 - sh: make install-deb
-- sh: make init
+- sh: python3 src/init.py
 
 build_script:
 
-- sh: make
+- sh: python3 src/main.py
