--- a/config.template.json
+++ b/config.template.json
@@ -1,11 +1,18 @@
 {
     "arch":"x86-64",
-    "gcc":"x86_64-linux-gnu-gcc"
+    "gcc":"x86_64-linux-gnu-gcc",
     "g++":"x86_64-linux-gnu-g++",
     "scriptsrepo":"OpenCompile/BuildScripts",
     "finalrepo":"OpenCompile/TarRepo",
     "openssl":{
         "repo":"openssl/openssl",
         "branch":"OpenSSL_1_1_0-stable"
+    },
+    "plugins":{
+        "ntfy":{
+            "enabled":true,
+            "server":"https://ntfy.sh",
+            "topic":"test"
+        }
     }
 }
